# monte-carlo

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  MANIFEST.in  MonteCarlo.py  PR_SUMMARY.md  README.md  ai.py  analysis.py  cli.py  data.py  demo.py  pyproject.toml  requirements.lock.txt  requirements.txt  setup.py  simulation.py  viz.py
.agent/: config.yaml  instructions.md
.github/workflows/: ci.yml
docs/: constitution.md  improvements.md  quick_reference.md  strategic_plan.md  value_enhancement_summary.md
sample_data/: AAPL.csv
tests/: test_ai.py  test_analysis.py  test_cli.py  test_data.py  test_simulation.py  test_viz.py
